--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "collab-editing-poc",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.7",
     "react": "^17.0.2",
+    "react-cursor-position": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "websocket": "^1.0.34"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,14 +39,12 @@
     ]
   },
   "devDependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
     "react-redux": "^7.2.4",
     "react-redux-loading": "^4.6.1",
     "react-router-dom": "^5.2.0"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "src/server/config.js",
+  "main": "src/config.js",
   "keywords": [],
   "author": "",
   "license": "ISC"
